Nick-Pillsbury/Name_Space_Isolation/full-namespace-isolation.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-cross-namespace
  namespace: team-a
spec:
  endpointSelector: {}
  ingress: []
  egress:
  - toEntities:
    - cluster
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-cross-namespace
  namespace: team-b
spec:
  endpointSelector: {}
  ingress: []
  egress:
  - toEntities:
    - cluster
